# parsio

./: Cargo.toml  README.md
src/: error.rs  lib.rs  read.rs  write.rs
src/read/: checkpoint.rs
